Fix form alignment. Finalize all elements on screen.

--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,7 @@ input, button, textarea, select {
 
 p, h1, h2, h3, h4, h5, h6 {
     overflow-wrap: break-word;
+   
 }
 
 p {
@@ -55,10 +56,6 @@ h1 {
     font-family: 'snigletextrabold', sans-serif; 
 }
 
-div {
-    width: 100%;
-}
-
 .container {
     display: flex;
     flex-flow: row nowrap;
@@ -66,12 +63,15 @@ div {
 
 .logo {
     height: 100vh;
-    width: 35%;
 }
 
 .logo img {
     height: 100%;
     object-fit: cover;
+}
+
+.content {
+    width: 100%;
 }
 
 .align-content {
@@ -80,7 +80,7 @@ div {
 }
 
 .top-content {
-    margin-top: 70px;
+    margin-top: 45px;
     margin-bottom: 40px;
 }
 
@@ -90,5 +90,16 @@ div {
 
 .form {
     box-shadow: 5px 2px 6px rgb(114, 110, 110);
+}
 
+form {
+    display: flex;
+    flex-flow: row nowrap;
+    padding: 30px 0px;
+    font-size: 12px;
+}
+
+label, input {
+    display: block;
+    margin: 0px 50px;
 }
